--- a/css/styles.css
+++ b/css/styles.css
@@ -225,7 +225,7 @@ section {
   left: 0;
   width: 100%;
   height: 100vh;
-  background: url("/nauquest/assets/images/seaview.jpg") no-repeat center/cover;
+  background: url("/assets/images/seaview.jpg") no-repeat center/cover;
   display: flex;
   align-items: flex-end;
   justify-content: center;
@@ -285,8 +285,7 @@ section {
 #moto {
   width: 100%;
   height: 80svh;
-  background: url("/nauquest/assets/images/akropolis.jpg") no-repeat
-    center/cover;
+  background: url("/assets/images/akropolis.jpg") no-repeat center/cover;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -327,10 +326,11 @@ section {
   font-size: 3.4rem;
   max-width: 50ch;
   font-family: "Instrument Serif", serif;
+  transition: all 1s ease;
 }
 .about-image {
   position: relative;
-  background-image: url("/nauquest/assets/images/athensbynight.jpg");
+  background-image: url("/assets/images/athensbynight.jpg");
   background-size: 80%;
   background-position: center;
   background-repeat: no-repeat;
@@ -340,7 +340,6 @@ section {
 }
 
 .services-container {
-  padding-bottom: 0 0 100px;
   margin: auto;
 }
 
@@ -350,16 +349,22 @@ section {
   max-width: 25ch;
   font-size: 4rem;
   font-weight: 400;
+  transition: all 0.5s ease;
 }
 
 .services-grid {
-  width: 100%;
+  display: grid;
+  grid-template-columns: 2fr 3fr;
+  gap: 2rem;
+}
+
+.service-grid-images {
+  grid-column: 2;
   display: flex;
   flex-direction: column;
 }
 
 .service {
-  position: relative;
   display: flex;
   height: 130svh;
 }
@@ -376,26 +381,51 @@ section {
   width: 100%;
 }
 
-.service .service-text-container {
-  position: sticky;
-  top: 80px;
-  width: 100%;
-  margin: auto;
+#service-sticky-panel {
+  grid-column: 1;
+  margin-bottom: 2rem;
+  pointer-events: none;
 }
 
-.service-text {
+#sticky-text {
+  position: sticky;
+  top: 150px;
   max-width: 50ch;
   margin: auto;
   padding: 20px;
+  font-size: 1rem;
+  opacity: 0;
+  transition: all 0.5s ease;
 }
 
-.service-text h3 {
+#sticky-text h3 {
   font-size: 2.4rem;
   font-weight: 300;
   margin-bottom: 2rem;
 }
 
-.service-text p {
+#sticky-text p {
+  font-size: 16px;
+  margin-bottom: 2rem;
+}
+
+/* helper classes */
+.fade-in {
+  opacity: 1 !important;
+  filter: blur(0);
+}
+.fade-out {
+  opacity: 0 !important;
+  filter: blur(10px);
+}
+
+.sticky-text h3 {
+  font-size: 2.4rem;
+  font-weight: 300;
+  margin-bottom: 2rem;
+}
+
+.sticky-text p {
   font-size: 16px;
   margin-bottom: 1rem;
 }
@@ -403,7 +433,7 @@ section {
 #tailor-made {
   width: 100%;
   height: 130svh;
-  background: url("/nauquest/assets/images/beach.jpg") center no-repeat;
+  background: url("/assets/images/beach.jpg") center no-repeat;
   background-size: cover;
 }
 
@@ -433,7 +463,7 @@ section {
   z-index: 0;
   height: 100vh;
   background: var(--blue);
-  color: var(--sandy);
+  color: var(--white);
 }
 
 .footer-container {
@@ -444,6 +474,8 @@ section {
   flex-direction: column;
   gap: 5rem;
   height: 100%;
+  filter: blur(4px);
+  transition: all 0.5s ease;
 }
 
 .footer-container .brand-name {
