--- a/css/styles.css
+++ b/css/styles.css
@@ -28,7 +28,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: "Instrument Serif", serif;
+  font-family: "Lora", serif;
 }
 
 img,
@@ -127,7 +127,7 @@ a {
 }
 
 .navmenu-container {
-  color: var(--sandy);
+  color: var(--white);
   max-width: 100rem;
   margin: auto;
   padding: 0rem 1.5rem;
@@ -153,8 +153,8 @@ a {
 .navmenu-container ul {
   width: fit-content;
   font-size: 3rem;
-  font-family: "Instrument Serif", serif;
-  font-weight: 600;
+  font-family: "Lora", serif;
+  font-weight: 500;
   display: flex;
   flex-direction: column;
   gap: 1rem;
@@ -164,7 +164,6 @@ a {
   width: fit-content;
   white-space: nowrap;
   transition: opacity 0.4s ease;
-  letter-spacing: 2px;
 }
 
 .navmenu-container ul li:hover {
@@ -250,15 +249,14 @@ section {
 .bold {
   position: relative;
   font-weight: 600;
-  letter-spacing: 1px;
   color: var(--blue);
 }
 
 .hero h1 {
-  font-size: 3rem;
-  margin-bottom: 1rem;
+  font-size: clamp(2.5rem, 1rem + 4vw, 4rem);
+  margin-bottom: 0.5rem;
   color: var(--white);
-  letter-spacing: 2px;
+  font-weight: 500;
 }
 
 .hero p {
@@ -266,14 +264,13 @@ section {
   text-align: center;
   color: var(--white);
   max-width: 32ch;
-  font-family: "Instrument Serif", serif;
+  font-family: "Lora", serif;
 }
 
 #brand {
-  font-size: 15rem;
-  margin-top: 20vh;
+  font-size: 5rem;
+  margin-top: calc(50svh - 10rem);
   color: var(--white);
-  line-height: 12rem;
 }
 
 .content {
@@ -300,17 +297,17 @@ section {
   align-items: center;
   justify-content: center;
   gap: 1rem;
-  padding-bottom: 5rem;
+  padding-bottom: 4rem;
   backdrop-filter: brightness(0.65);
   color: var(--white);
 }
 
 .moto-text h2 {
-  font-size: clamp(2rem, 4vw + 1rem, 4rem);
-  letter-spacing: 2px;
+  font-size: clamp(2rem, 1rem + 3.5vw, 3.5rem);
+  font-weight: 500;
 }
 .moto-text p {
-  font-size: 1.6rem;
+  font-size: 1.2rem;
 }
 
 .about-container {
@@ -323,11 +320,12 @@ section {
 }
 
 .about-container p {
-  font-size: 3.4rem;
+  font-size: clamp(2rem, 1rem + 4vw, 3.2rem);
   max-width: 50ch;
   font-family: "Instrument Serif", serif;
   transition: all 1s ease;
 }
+
 .about-image {
   position: relative;
   background-image: url("/assets/images/athensbynight.jpg");
@@ -346,10 +344,12 @@ section {
 .services-container h2 {
   margin: 0 auto 100px;
   text-align: center;
-  max-width: 25ch;
-  font-size: 4rem;
+  max-width: 30ch;
+  font-size: clamp(2.5rem, 1rem + 4vw, 4rem);
   font-weight: 400;
   transition: all 0.5s ease;
+  padding: 100px 1.5rem;
+  letter-spacing: -3px;
 }
 
 .services-grid {
@@ -399,9 +399,10 @@ section {
 }
 
 #sticky-text h3 {
-  font-size: 2.4rem;
+  font-size: clamp(1.6rem, 1rem + 2vw, 2.4rem);
   font-weight: 300;
   margin-bottom: 2rem;
+  letter-spacing: -2px;
 }
 
 #sticky-text p {
@@ -421,7 +422,7 @@ section {
 
 .sticky-text h3 {
   font-size: 2.4rem;
-  font-weight: 300;
+  font-weight: 400;
   margin-bottom: 2rem;
 }
 
@@ -430,10 +431,50 @@ section {
   margin-bottom: 1rem;
 }
 
+.mobile-service-text {
+  display: none;
+}
+
+@media (max-width: 999px) {
+  .services-grid {
+    display: block;
+  }
+
+  .service-grid-images {
+    gap: 2rem;
+  }
+  #service-sticky-panel {
+    display: none;
+  }
+  .mobile-service-text {
+    display: block;
+    padding: 2rem 1rem;
+  }
+
+  .service {
+    display: flex;
+    flex-direction: column;
+    height: auto;
+  }
+
+  .service .service-image-container {
+    width: 100%;
+  }
+
+  .service .service-image-container img {
+    aspect-ratio: 16/9;
+  }
+
+  .service .mobile-service-text h3 {
+    font-weight: 300;
+    margin-bottom: 0.5rem;
+  }
+}
+
 #tailor-made {
   width: 100%;
   height: 130svh;
-  background: url("/assets/images/beach.jpg") center no-repeat;
+  background: url("/assets/images/akropolis-night.jpg") center no-repeat;
   background-size: cover;
 }
 
@@ -446,22 +487,22 @@ section {
   justify-content: center;
   gap: 1rem;
   padding-bottom: 5rem;
-  backdrop-filter: brightness(0.65);
-  color: var(--sandy);
+  backdrop-filter: brightness(0.85);
+  color: var(--white);
+  text-align: center;
 }
 
 .tailor-made-text h2 {
-  font-size: clamp(2rem, 4vw + 1rem, 4rem);
-  letter-spacing: 2px;
+  font-size: clamp(2.5rem, 1rem + 4vw, 4rem);
 }
 .tailor-made-text p {
-  font-size: 1.6rem;
+  font-size: 1.2rem;
 }
 
 .footer {
   position: relative;
   z-index: 0;
-  height: 100vh;
+  height: 100svh;
   background: var(--blue);
   color: var(--white);
 }
@@ -489,7 +530,7 @@ section {
   color: var(--white);
   max-width: 32ch;
   margin: auto;
-  font-family: "Instrument Serif", serif;
+  font-family: "Lora", serif;
 }
 
 .footer-base {
@@ -532,4 +573,10 @@ section {
 .footer-base-bottom div {
   display: flex;
   gap: 2rem;
+}
+
+@media (max-width: 768px) {
+  p {
+    font-size: 16px;
+  }
 }
