--- a/css/styles.css
+++ b/css/styles.css
@@ -259,14 +259,6 @@ section {
   font-weight: 500;
 }
 
-.hero p {
-  font-size: 1.6rem;
-  text-align: center;
-  color: var(--white);
-  max-width: 32ch;
-  font-family: "Lora", serif;
-}
-
 #brand {
   font-size: 5rem;
   margin-top: calc(50svh - 10rem);
@@ -337,11 +329,13 @@ section {
   width: 100%;
 }
 
-.services-container {
+.services-container,
+.specific-service-container {
   margin: auto;
 }
 
-.services-container h2 {
+.services-container h2,
+.specific-service-container h2 {
   margin: 0 auto 100px;
   text-align: center;
   max-width: 30ch;
@@ -384,7 +378,6 @@ section {
 #service-sticky-panel {
   grid-column: 1;
   margin-bottom: 2rem;
-  pointer-events: none;
 }
 
 #sticky-text {
@@ -431,6 +424,25 @@ section {
   margin-bottom: 1rem;
 }
 
+.sticky-link {
+  width: fit-content;
+  position: relative;
+}
+
+.sticky-link::before {
+  content: "";
+  position: absolute;
+  bottom: -4px;
+  width: 20%;
+  height: 1px;
+  background: var(--coral);
+  transition: width 0.4s ease;
+}
+
+.sticky-link:hover::before {
+  width: 100%;
+}
+
 .mobile-service-text {
   display: none;
 }
@@ -466,12 +478,21 @@ section {
   }
 
   .service .mobile-service-text h3 {
-    font-weight: 300;
-    margin-bottom: 0.5rem;
+    font-weight: 400;
+    margin-bottom: 1rem;
+  }
+
+  .service .mobile-service-text p {
+    margin-bottom: 1rem;
+  }
+
+  #services {
+    padding-bottom: 2rem;
   }
 }
 
 #tailor-made {
+  position: relative;
   width: 100%;
   height: 130svh;
   background: url("/assets/images/akropolis-night.jpg") center no-repeat;
@@ -525,11 +546,11 @@ section {
 }
 
 .subheader {
-  font-size: 1.6rem;
+  font-size: 1.2rem;
   text-align: center;
   color: var(--white);
   max-width: 32ch;
-  margin: auto;
+  margin: 0 auto;
   font-family: "Lora", serif;
 }
 
@@ -551,9 +572,22 @@ section {
   max-width: 40ch;
 }
 
+.footer-col h4 {
+  font-size: 1.2rem;
+  font-weight: 300;
+  opacity: 0.6;
+  margin-bottom: 1rem;
+  font-family: "Inter", sans-serif;
+}
+
 .footer-links {
   display: flex;
   gap: 4rem;
+}
+
+.footer-col ul li {
+  font-family: "Lora", serif;
+  margin-bottom: 0.5rem;
 }
 
 .footer-links a:hover {
@@ -570,13 +604,78 @@ section {
   font-size: 14px;
 }
 
+.footer-base-bottom > * {
+  width: 100%;
+}
+
 .footer-base-bottom div {
   display: flex;
+  justify-content: center;
   gap: 2rem;
 }
 
+#konstascreative {
+  text-align: end;
+}
+
 @media (max-width: 768px) {
-  p {
+  p,
+  a {
     font-size: 16px;
+  }
+}
+
+#specific-service {
+  padding-bottom: 1rem;
+}
+
+.specific {
+  height: 100%;
+  display: grid;
+  grid-template-columns: 2fr 3fr;
+  gap: 1rem;
+}
+
+.sp-text-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.sp-text {
+  padding: 2rem;
+}
+
+.sp-text p {
+  margin-bottom: 1rem;
+}
+
+.sp-text-container img {
+  padding-left: 1rem;
+}
+
+.sp-text h3 {
+  font-size: clamp(1.6rem, 1rem + 2vw, 2.4rem);
+  font-weight: 300;
+  margin-bottom: 2rem;
+  letter-spacing: -2px;
+}
+
+.sp-img-container img {
+  height: 100%;
+  object-fit: cover;
+}
+
+@media (max-width: 900px) {
+  .sp-text-container img {
+    display: none;
+  }
+
+  .specific {
+    grid-template-columns: 1fr;
+  }
+
+  .sp-img-container img {
+    aspect-ratio: 16/9;
   }
 }
