--- a/css/styles.css
+++ b/css/styles.css
@@ -84,8 +84,12 @@ a {
 }
 .nav-center {
   position: absolute;
+  top: 0;
   left: 50%;
   transform: translateX(-50%);
+  background-color: var(--blue);
+  border-radius: 0 0 999px 999px;
+  padding: 0 0.25rem 0.25rem;
 }
 
 #burger {
@@ -138,9 +142,17 @@ a {
   height: 100%;
 }
 
+.logo {
+  width: 80px;
+  border: 1px solid var(--white);
+  border-top-width: 0;
+  padding: 0.25rem;
+  border-radius: 0 0 50% 50%;
+}
+
 .logo-name .brand-name {
   margin-top: 80px;
-  font-size: 5rem;
+  font-size: clamp(4rem, 1rem + 5vw, 5rem);
   text-align: center;
 }
 
@@ -152,7 +164,6 @@ a {
 
 .navmenu-container ul {
   width: fit-content;
-  font-size: 3rem;
   font-family: "Lora", serif;
   font-weight: 500;
   display: flex;
@@ -164,6 +175,10 @@ a {
   width: fit-content;
   white-space: nowrap;
   transition: opacity 0.4s ease;
+}
+
+.navmenu-container ul li a {
+  font-size: clamp(2rem, 3vw + 1rem, 3rem);
 }
 
 .navmenu-container ul li:hover {
@@ -224,7 +239,7 @@ section {
   left: 0;
   width: 100%;
   height: 100vh;
-  background: url("/assets/images/seaview.jpg") no-repeat center/cover;
+  background: url("assets/images/seaview.jpg") no-repeat center/cover;
   display: flex;
   align-items: flex-end;
   justify-content: center;
@@ -260,7 +275,7 @@ section {
 }
 
 #brand {
-  font-size: 5rem;
+  font-size: clamp(4rem, 1rem + 5vw, 5rem);
   margin-top: calc(50svh - 10rem);
   color: var(--white);
 }
@@ -274,7 +289,7 @@ section {
 #moto {
   width: 100%;
   height: 80svh;
-  background: url("/assets/images/akropolis.jpg") no-repeat center/cover;
+  background: url("assets/images/akropolis.jpg") no-repeat center/cover;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -320,7 +335,7 @@ section {
 
 .about-image {
   position: relative;
-  background-image: url("/assets/images/athensbynight.jpg");
+  background-image: url("assets/images/athensbynight.jpg");
   background-size: 80%;
   background-position: center;
   background-repeat: no-repeat;
@@ -495,7 +510,7 @@ section {
   position: relative;
   width: 100%;
   height: 130svh;
-  background: url("/assets/images/akropolis-night.jpg") center no-repeat;
+  background: url("assets/images/akropolis-night.jpg") center no-repeat;
   background-size: cover;
 }
 
@@ -536,12 +551,11 @@ section {
   flex-direction: column;
   gap: 5rem;
   height: 100%;
-  filter: blur(4px);
   transition: all 0.5s ease;
 }
 
 .footer-container .brand-name {
-  font-size: 5rem;
+  font-size: clamp(4rem, 1rem + 5vw, 5rem);
   text-align: center;
 }
 
@@ -562,6 +576,7 @@ section {
 
 .footer-base-top {
   display: flex;
+  flex-wrap: wrap;
   gap: 4rem;
   justify-content: space-between;
   border-top: 1px solid;
