--- a/css/styles.css
+++ b/css/styles.css
@@ -239,7 +239,7 @@ section {
   left: 0;
   width: 100%;
   height: 100vh;
-  background: url("assets/images/seaview.jpg") no-repeat center/cover;
+  background: url("../assets/images/seaview.jpg") no-repeat center/cover;
   display: flex;
   align-items: flex-end;
   justify-content: center;
@@ -289,7 +289,7 @@ section {
 #moto {
   width: 100%;
   height: 80svh;
-  background: url("assets/images/akropolis.jpg") no-repeat center/cover;
+  background: url("../assets/images/akropolis.jpg") no-repeat center/cover;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -335,7 +335,7 @@ section {
 
 .about-image {
   position: relative;
-  background-image: url("assets/images/athensbynight.jpg");
+  background-image: url("../assets/images/athensbynight.jpg");
   background-size: 80%;
   background-position: center;
   background-repeat: no-repeat;
@@ -510,7 +510,7 @@ section {
   position: relative;
   width: 100%;
   height: 130svh;
-  background: url("assets/images/akropolis-night.jpg") center no-repeat;
+  background: url("../assets/images/akropolis-night.jpg") center no-repeat;
   background-size: cover;
 }
 
