--- a/css/styles.css
+++ b/css/styles.css
@@ -148,6 +148,7 @@ a {
   border-top-width: 0;
   padding: 0.25rem;
   border-radius: 0 0 50% 50%;
+  filter: brightness(1.4);
 }
 
 .logo-name .brand-name {
@@ -165,7 +166,7 @@ a {
 .navmenu-container ul {
   width: fit-content;
   font-family: "Lora", serif;
-  font-weight: 500;
+  font-weight: 400;
   display: flex;
   flex-direction: column;
   gap: 1rem;
@@ -233,13 +234,13 @@ section {
   background: var(--white);
 }
 
-.hero {
+.hero,
+.contact-hero {
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100vh;
-  background: url("../assets/images/seaview.jpg") no-repeat center/cover;
   display: flex;
   align-items: flex-end;
   justify-content: center;
@@ -247,7 +248,16 @@ section {
   text-align: center;
 }
 
-.hero-container {
+.hero {
+  background: url("../assets/images/seaview.jpg") no-repeat center/cover;
+}
+
+.contact-hero {
+  background: url("../assets/images/akropolis-night.jpg") no-repeat center/cover;
+}
+
+.hero-container,
+.contact-hero-container {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -257,17 +267,19 @@ section {
   width: 100%;
   height: 100%;
 }
+
 .italic {
   font-style: italic;
 }
 
 .bold {
   position: relative;
-  font-weight: 600;
+  font-weight: 500;
   color: var(--blue);
 }
 
-.hero h1 {
+.hero h1,
+.contact-hero h1 {
   font-size: clamp(2.5rem, 1rem + 4vw, 4rem);
   margin-bottom: 0.5rem;
   color: var(--white);
@@ -345,17 +357,19 @@ section {
 }
 
 .services-container,
-.specific-service-container {
+.specific-service-container,
+.contact-container {
   margin: auto;
 }
 
 .services-container h2,
-.specific-service-container h2 {
+.specific-service-container h2,
+.contact-container h2 {
   margin: 0 auto 100px;
   text-align: center;
   max-width: 30ch;
   font-size: clamp(2.5rem, 1rem + 4vw, 4rem);
-  font-weight: 400;
+  font-weight: 300;
   transition: all 0.5s ease;
   padding: 100px 1.5rem;
   letter-spacing: -3px;
@@ -415,7 +429,7 @@ section {
 
 #sticky-text p {
   font-size: 16px;
-  margin-bottom: 2rem;
+  margin-bottom: 1rem;
 }
 
 /* helper classes */
@@ -440,8 +454,14 @@ section {
 }
 
 .sticky-link {
+  margin-top: 2rem;
   width: fit-content;
   position: relative;
+}
+
+.sticky-link a {
+  display: inline-flex;
+  gap: 0.5rem;
 }
 
 .sticky-link::before {
@@ -522,7 +542,7 @@ section {
   align-items: center;
   justify-content: center;
   gap: 1rem;
-  padding-bottom: 5rem;
+  padding: 0 5vw 5rem;
   backdrop-filter: brightness(0.85);
   color: var(--white);
   text-align: center;
@@ -530,6 +550,7 @@ section {
 
 .tailor-made-text h2 {
   font-size: clamp(2.5rem, 1rem + 4vw, 4rem);
+  font-weight: 400;
 }
 .tailor-made-text p {
   font-size: 1.2rem;
@@ -692,5 +713,104 @@ section {
 
   .sp-img-container img {
     aspect-ratio: 16/9;
+  }
+}
+
+#contact {
+  padding: 100px 0;
+  background: var(--white);
+}
+
+.contact-container {
+  max-width: 100rem;
+  padding: 0 1.5rem;
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+}
+.contact-flex {
+  display: flex;
+  gap: 2rem;
+}
+
+.contact-flex h3 {
+  font-size: clamp(1.6rem, 1rem + 2vw, 2.4rem);
+  font-weight: 300;
+  margin-bottom: 2rem;
+  letter-spacing: -2px;
+}
+
+.contact-flex p {
+  font-size: 16px;
+  margin-bottom: 1rem;
+  max-width: 60ch;
+}
+
+form {
+  width: 100%;
+  max-width: 800px;
+  margin: 0 auto;
+  font-family: "Inter", sans-serif;
+  font-size: 16px;
+  font-weight: 400;
+}
+
+label {
+  display: block;
+  margin-top: 1rem;
+  margin-bottom: 0.25rem;
+}
+
+input,
+select,
+textarea {
+  width: 100%;
+  padding: 0.5rem 0.5rem;
+  border: 1px solid #bbb;
+  background-color: transparent;
+  font-size: 1rem;
+  font-family: inherit;
+  box-sizing: border-box;
+  transition: border 0.2s;
+  font-size: 16px;
+  font-weight: 300;
+}
+
+input:focus,
+select:focus,
+textarea:focus {
+  outline: none;
+}
+
+textarea {
+  resize: vertical;
+}
+
+button[type="submit"] {
+  margin-top: 1.5rem;
+  background-color: var(--coral);
+  color: #fff;
+  border: none;
+  padding: 0.75rem 1.5rem;
+  font-size: 1rem;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+button[type="submit"]:hover {
+  background-color: var(--coral-dark);
+}
+
+.contact-info {
+  margin-top: 4rem;
+}
+
+@media (max-width: 1100px) {
+  .contact-flex {
+    flex-direction: column;
+  }
+
+  form {
+    width: 100%;
   }
 }
