--- a/css/styles.css
+++ b/css/styles.css
@@ -123,7 +123,7 @@ a {
 #navmenu {
   position: fixed;
   width: 100%;
-  height: 100svh;
+  height: 100vh;
   background-color: var(--blue);
   z-index: 98;
   transition: transform 0.4s ease;
@@ -153,7 +153,7 @@ a {
 
 .logo-name .brand-name {
   margin-top: 80px;
-  font-size: clamp(4rem, 1rem + 5vw, 5rem);
+  font-size: clamp(3.4rem, 1rem + 5vw, 5rem);
   text-align: center;
 }
 
@@ -179,7 +179,7 @@ a {
 }
 
 .navmenu-container ul li a {
-  font-size: clamp(2rem, 3vw + 1rem, 3rem);
+  font-size: clamp(1.2rem, 3vw + 1rem, 3rem);
 }
 
 .navmenu-container ul li:hover {
@@ -201,6 +201,7 @@ a {
 }
 
 #menuImg-container img {
+  width: 100%;
   position: absolute;
   bottom: 0;
   right: 0;
@@ -288,7 +289,7 @@ section {
 
 #brand {
   font-size: clamp(4rem, 1rem + 5vw, 5rem);
-  margin-top: calc(50svh - 10rem);
+  margin-top: calc(50vh - 10rem);
   color: var(--white);
 }
 
@@ -300,7 +301,7 @@ section {
 
 #moto {
   width: 100%;
-  height: 80svh;
+  height: 80vh;
   background: url("../assets/images/akropolis.jpg") no-repeat center/cover;
   display: flex;
   flex-direction: column;
@@ -352,7 +353,7 @@ section {
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: fixed;
-  height: 80svh;
+  height: 80vh;
   width: 100%;
 }
 
@@ -389,7 +390,7 @@ section {
 
 .service {
   display: flex;
-  height: 130svh;
+  height: 130vh;
 }
 
 .service .service-image-container {
@@ -529,7 +530,7 @@ section {
 #tailor-made {
   position: relative;
   width: 100%;
-  height: 130svh;
+  height: 130vh;
   background: url("../assets/images/akropolis-night.jpg") center no-repeat;
   background-size: cover;
 }
@@ -562,7 +563,7 @@ section {
 .footer {
   position: relative;
   z-index: 0;
-  height: 100svh;
+  height: 100vh;
   background: var(--blue);
   color: var(--white);
 }
@@ -579,7 +580,7 @@ section {
 }
 
 .footer-container .brand-name {
-  font-size: clamp(4rem, 1rem + 5vw, 5rem);
+  font-size: clamp(3.4rem, 1rem + 5vw, 5rem);
   text-align: center;
 }
 
@@ -629,7 +630,8 @@ section {
   margin-bottom: 0.5rem;
 }
 
-.footer-links a:hover {
+.footer-links a:hover,
+.footer a:hover {
   color: var(--coral);
 }
 
@@ -646,7 +648,9 @@ section {
 .footer-base-bottom > * {
   width: 100%;
 }
-
+.footer-base-bottom * {
+  font-size: 14px;
+}
 .footer-base-bottom div {
   display: flex;
   justify-content: center;
@@ -663,7 +667,8 @@ section {
   }
   p,
   a,
-  .tailor-made-text p {
+  .tailor-made-text p,
+  .subheader {
     font-size: 16px;
   }
   .footer-container {
@@ -671,6 +676,9 @@ section {
   }
   .footer-base-top {
     gap: 2rem;
+  }
+  .footer-col:first-of-type {
+    display: none;
   }
   .footer-base-bottom {
     flex-direction: column;
