--- a/css/styles.css
+++ b/css/styles.css
@@ -267,6 +267,7 @@ section {
   backdrop-filter: brightness(0.65);
   width: 100%;
   height: 100%;
+  text-shadow: 0px 0px 4px rgba(0, 0, 0, 0.9);
 }
 
 .italic {
